# file-processing-pipeline-service-rust

./: .dockerignore  .env.example  .gitignore  .project-metadata.json  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  schema.rs
migrations/: 000001_create_files_table.sql
src/: controllers.rs  main.rs  models.rs  repositories.rs  router.rs  services.rs
src/controllers/: file_controller.rs
src/database/migrations/: 001_create_files_table.sql
src/models/: file_model.rs
src/repositories/: file_repository.rs
src/services/: file_service.rs
