[package]
name = "file_processing_pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [ "postgres" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.16"
env_logger = "0.9.2"
docker = "0.13.0"
serde_xml_rs = "0.5.3"